# discogs-rs

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md  appveyor.yml  todo
src/: artist.rs  data_structures.rs  discogs.rs  label.rs  lib.rs  master.rs  pagination.rs  query_builder.rs  release.rs
src/data_structures/: artist.rs  artist_releases.rs  company.rs  contributor.rs  image.rs  label.rs  master.rs  mod.rs  others.rs  pagination.rs  release.rs  search.rs  search_parameters.rs
src/query/: mod.rs  query_auth.rs  query_builder.rs  query_error.rs  query_ks_auth.rs  query_token_auth.rs  query_type.rs
tests/: real_world_tests.rs
