[package]
name = "discogs"
version = "0.1.0"
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
description = "A Library to consume Discogs API"
keywords = ["discogs", "api", "client"]
license = "GPL-3.0+"
repository = "https://github.com/afonso360/discogs-rs"
readme = "README.md"

[dependencies]
hyper = "0.9.13"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
